# advent-of-code-2023

./: .gitignore  DEVLOG.md  README.md  pyproject.toml
data/: time_per_day.json
notebooks/: 01. Trebuchet!.ipynb  02. Cube Conundrum.ipynb  03. Gear Ratios.ipynb  04. Scratchcards.ipynb  05. If You Give A Seed A Fertilizer.ipynb  06. Wait For It.ipynb  07. Camel Cards.ipynb  08. Haunted Wasteland.ipynb  09. Mirage Maintenance.ipynb  10. Pipe Maze.ipynb  11. Cosmic Expansion.ipynb  TEMPLATE.ipynb
puzzles/: day-03.txt  day-07.txt  day-08.txt  day-09.txt  day-10.txt
