[tool.poetry]
name = "advent-of-code-2023"
version = "0.0.1"
description = "My responses to the 2023 Advent of Code puzzles"
authors = ["Trevor Hubbard <trevormhubbard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
python-Levenshtein = "^0.23.0"
ipykernel = "^6.27.1"
pickleshare = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
